[package]
name = "Razorpay_rust"
version = "0.0.1"
edition = "2021"
authors = ["Raj <floatraj@gmail.com>"]
repository = "https://github.com/OutOfBoundCats/Razorpay_rust.git"
description = "A WIP Razorpay SDK for Rust"
license = "MIT"
keywords = ["Razorpay", "Razorpay_SDK"]
categories = ["api-bindings"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
